--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,6 @@ layout: page
     I'm an undergraduate student and major in CS.
     Display a favored picture of PKU's scenery.
         <br><br>
-        <img src="https://github.com/infinity1009/Saki.github.io/blob/master/assets/img/PKU_s.jpg">
+        </img src="https://github.com/infinity1009/Saki.github.io/blob/master/assets/img/PKU_s.jpg">
     </p>
 </section>
